fixed header heaihgt on mobile

--- a/style.css
+++ b/style.css
@@ -456,7 +456,7 @@ video {
 
     .header {
         position: fixed;
-        height: 600px;
+        height: 500px;
 
     }
 
